# test-tracing-opentelemetry

./: Cargo.toml  README.md
src/: main.rs  tracer.rs
vsock-exporter/: Cargo.toml
vsock-exporter/src/: lib.rs
