[package]
name = "vsock-exporter"
version = "0.1.0"
authors = ["James O. D. Hunt <james.o.hunt@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.15.0"
libc = "0.2.66"
thiserror = "1.0.24"
opentelemetry = { version = "0.13.0", features=["serialize"] }
serde = { version = "1.0.104", features = ["derive"] }
vsock = "0.1.4"
bincode = "1.2.1"
slog = { version = "2.5.2", features = ["dynamic-keys", "max_level_trace", "release_max_level_info"] }
async-trait = "0.1.50"
