[package]
name = "vsock-exporter"
version = "0.1.0"
authors = ["James O. D. Hunt <james.o.hunt@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"
thiserror = "1.0.24"

# XXX: Note: opentelemetry version "0.14.0" DOESN'T WORK!!
#
# Compile fails like this:
#
#  error[E0277]: the trait bound `vsock_exporter::Exporter: SpanExporter` is not satisfied
#    --> src/tracer.rs:32:31
#     |
#  32 |         .with_simple_exporter(exporter)
#     |                               ^^^^^^^^ the trait `SpanExporter` is not implemented for
#                                               `vsock_exporter::Exporter`
opentelemetry = { version = "0.13.0", features=["serialize"] }

serde = { version = "1.0.104", features = ["derive"] }
vsock = "0.2.3"
bincode = "1.3.3"
slog = { version = "2.5.2", features = ["dynamic-keys", "max_level_trace", "release_max_level_info"] }
async-trait = "0.1.50"
